# dockhost-rubik-site

./: .gitignore  README.md
rubik-app/: Cargo.toml  Dockerfile  rubik.yaml
rubik-app/sql/: get_top.sql  get_user.sql  update_user.sql
rubik-app/src/: auth.rs  db.rs  main.rs  misc.rs
rubik-app/static/: cube.css  pikme-b.css
rubik-app/static/html/: login.tera  profile.tera  register.tera  rubik.html  start.html  top.tera
rubik-app/static/js/cube/: app.js  controls.js  renderer.js  state.js
