[package]
name = "app"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-files = "0.6.6"
actix-web = { version = "4.10.2", features = ["cookies"] }
jsonwebtoken = "9.3.1"
rand = "0.9.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tera = "1.20.0"
time = "0.3.41"
yaml-rust2 = "0.10.1"
bcrypt = "0.17.0"
once_cell = "1.21.3"
sqlx = { version = "0.8.6", features = ["postgres", "runtime-async-std"] }
